Datatables update - sweetalert

--- a/NLayeredProjectExample/NLayeredProject.MvcWebUI/Views/Product/GetProducts.cshtml
+++ b/NLayeredProjectExample/NLayeredProject.MvcWebUI/Views/Product/GetProducts.cshtml
@@ -37,15 +37,15 @@
                         @foreach (var product in Model.Products)
                         {
                             <tr role="row" class="odd">
-                                <td class="sorting_1" tabindex="0">@product.Id</td>
-                                <td>@product.Name</td>
-                                <td>@product.CategoryId</td>
+                                <td class="sorting_1" tabindex="0">@product.ProductId</td>
+                                <td>@product.ProductName</td>
+                                <td>@product.CategoryName</td>
                                 <td>@product.Height</td>
                                 <td>@product.Weight</td>
                                 <td>@product.Width</td>
-                                <td align="center"><button class="btn btn-purple" onclick="editProduct(@product.Id)">Edit</button></td>
-                                <td align="center"><button class="btn btn-danger" onclick="deleteProduct(@product.Id)">Delete</button></td>
-                                <td align="center"><a href="/Product/GetProductDetail/@product.Id" class="btn btn-info">Detail</a></td>
+                                <td align="center"><button class="btn btn-purple" onclick="editProduct(@product.ProductId)">Edit</button></td>
+                                <td align="center"><button class="btn btn-danger" onclick="deleteProduct(@product.ProductId)">Delete</button></td>
+                                <td align="center"><a href="/Product/GetProductDetail/@product.ProductId" class="btn btn-info">Detail</a></td>
                             </tr>
                         }
                     </tbody>
@@ -72,10 +72,9 @@
                             </div>
                             <div class="form-group">
                                 <label for="field-2" class="control-label">CategoryId</label>
-                                <input asp-for="@Model.Product.CategoryId" type="text" class="form-control" id="field-1" placeholder="e.g. Height">
-                                @*<select class="form-control" id="drpCategories" asp-for="@Model.Product.CategoryId" asp-items="@Model.Categories">
+                                <select class="form-control" id="drpCategories" asp-for="@Model.Product.CategoryId" asp-items="@Model.Categories">
                                         <option disabled selected value="-1">--Choose--</option>
-                                    </select>*@
+                                    </select>
                             </div>
                             <div class="form-group">
                                 <label for="field-3" class="control-label">Height</label>
@@ -129,10 +128,9 @@
                             <div class="form-group">
                                 <div class="form-group">
                                     <label for="field-8" class="control-label">CategoryId</label>
-                                    <input asp-for="@Model.Product.CategoryId" type="text" class="form-control" id="field-1" placeholder="e.g. Height">
-                                    @*<select class="form-control" id="drpCategoriesForUpdate" asp-for="@Model.Product.CategoryId" asp-items="@Model.Categories">
+                                    <select class="form-control" id="drpCategoriesForUpdate" asp-for="@Model.Product.CategoryId" asp-items="@Model.Categories">
                                             <option disabled selected value="-1">--Choose--</option>
-                                        </select>*@
+                                        </select>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -176,7 +174,6 @@
                 $('#product-updating-modal').modal('show');
             })
     }
-
     function deleteProduct(id) {
         swal({
             title: "Silmek istediğinizden emin misiniz?",
